--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "yumme-updated",
-  "version": "1.0.0",
-  "description": "update to new",
+  "name": "yumme-2",
+  "version": "2.0.0",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "dev": "nodemon   src/index.js"
   },
   "keywords": [
-    "javascript"
+    "javascript",
+    "backend"
   ],
-  "author": "rajan kumar",
+  "author": "akash",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.7",
-    "prettier": "^3.3.3"
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.2"
   },
   "dependencies": {
-    "cloudinary": "^2.5.1",
-    "cookie-parser": "^1.4.7",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.5.3",
+    "mongoose-aggregate-paginate-v2": "^1.1.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
