--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon   src/index.js"
+    "dev": "nodemon   src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [
     "javascript",
@@ -18,15 +19,14 @@
     "prettier": "^3.3.2"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "celebrate": "^15.0.3",
     "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3",
-    "mongoose-aggregate-paginate-v2": "^1.1.2",
-    "multer": "^1.4.5-lts.1"
+    "md5": "^2.3.0",
+    "mongoose": "^8.5.3"
   }
 }
