--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prettier": "^3.3.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "celebrate": "^15.0.3",
     "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
