--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mongoose": "^8.5.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "qrcode": "^1.5.4",
+    "streamifier": "^0.1.1"
   }
 }
